--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rs-school-react",
   "private": true,
   "version": "0.0.0",
+  "homepage": "./",
   "type": "module",
   "scripts": {
     "dev": "vite",
