--- a/package.json
+++ b/package.json
@@ -35,14 +35,17 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "fetch-mock": "^9.11.0",
     "husky": "^7.0.4",
     "jsdom": "^21.1.1",
     "lint-staged": "^12.4.1",
+    "node-fetch": "^3.3.1",
     "prettier": "^2.6.2",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.29.3"
+    "vitest": "^0.29.3",
+    "vitest-fetch-mock": "^0.2.2"
   },
   "browserslist": {
     "production": [
