--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
